Agregando AOS-Animation On Scroll al proyecto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,900&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" href="https://csstools.github.io/normalize.css/11.0.0/normalize.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <link rel="stylesheet" href="/src/css/base.css">
     <link rel="stylesheet" href="/src/css/header.css">
     <link rel="stylesheet" href="/src/css/perfil.css">
@@ -22,6 +26,7 @@
     <link rel="stylesheet" href="/src/css/contact.css">
     <link rel="stylesheet" href="/src/css/footer.css">
     <link rel="stylesheet" href="/src/css/components/pill.css">
+
 </head>
 
 <body>
@@ -69,9 +74,12 @@
                     <p class="perfil__occupation">FrontEnd Developer</p>
                 </div>
                 <div class="social-media">
-                    <a class="social-media__links social-media__links--github" href="https://github.com/EduardoPosas" target="_blank">Github</a>
-                    <a class="social-media__links social-media__links--linkedin" href="https://www.linkedin.com/in/alexanderposas/" target="_blank">Linkedin</a>
-                    <a class="social-media__links social-media__links--instagram" href="https://www.instagram.com/alexander_pozas/?igshid=MzNlNGNkZWQ4Mg%3D%3D">Instagram</a>
+                    <a class="social-media__links social-media__links--github" href="https://github.com/EduardoPosas"
+                        target="_blank">Github</a>
+                    <a class="social-media__links social-media__links--linkedin"
+                        href="https://www.linkedin.com/in/alexanderposas/" target="_blank">Linkedin</a>
+                    <a class="social-media__links social-media__links--curriculum"
+                        href="src/files/alexanderCurriculum.pdf" download="alexanderPozasCurriculm.pdf">Curriculum</a>
                 </div>
             </div>
         </div>
@@ -85,7 +93,6 @@
                 discovered this incredible world, I wanted to become a web developer. I consider myself a
                 well-organized, self-taught and responsible individual who enjoys learning new things on a daily basis.
             </p>
-            <a class="experience__button experience__button--primary" download="alexanderPozasCurriculm.pdf" href="src/files/alexanderCurriculum.pdf">Curriculum</a>
         </div>
     </section>
 
@@ -99,6 +106,12 @@
                 <p class="skill__description skill__description--css">CSS</p>
             </div>
             <div class="skill">
+                <p class="skill__description skill__description--gulp">Gulp</p>
+            </div>
+            <div class="skill">
+                <p class="skill__description skill__description--sass">SASS</p>
+            </div>
+            <div class="skill">
                 <p class="skill__description skill__description--js">Modern JS</p>
             </div>
             <div class="skill">
@@ -107,12 +120,7 @@
             <div class="skill">
                 <p class="skill__description skill__description--node">Node JS</p>
             </div>
-            <div class="skill">
-                <p class="skill__description skill__description--gulp">Gulp</p>
-            </div>
-            <div class="skill">
-                <p class="skill__description skill__description--sass">SASS</p>
-            </div>
+
             <div class="skill">
                 <p class="skill__description skill__description--mysql">MySql</p>
             </div>
@@ -132,13 +140,7 @@
                 <p class="soft-skill__description">Self-taught</p>
             </div>
             <div class="soft-skill">
-                <p class="soft-skill__description">Collaboration</p>
-            </div>
-            <div class="soft-skill">
                 <p class="soft-skill__description">Goal-setting</p>
-            </div>
-            <div class="soft-skill">
-                <p class="soft-skill__description">Responsible</p>
             </div>
             <div class="soft-skill">
                 <p class="soft-skill__description">Problem-solving</p>
@@ -165,8 +167,10 @@
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Control and Automation Engineering</h3>
-                        <p class="education-card__academy"><span class="education-card__year">2018 - </span> National Polytechnic Institute</p>
-                        <a href="https://www.ipn.mx/oferta-educativa/educacion-superior/ver-carrera.html?lg=es&id=7&nombre=Ingenier%C3%ADa-en-Control-y-Automatizaci%C3%B3n" class="pill pill--secondary" target="_blank">Program</a>
+                        <p class="education-card__academy"><span class="education-card__year">2018 - </span> National
+                            Polytechnic Institute</p>
+                        <a href="https://www.ipn.mx/oferta-educativa/educacion-superior/ver-carrera.html?lg=es&id=7&nombre=Ingenier%C3%ADa-en-Control-y-Automatizaci%C3%B3n"
+                            class="pill pill--secondary" target="_blank">Program</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -176,7 +180,8 @@
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Web Development</h3>
                         <p class="education-card__academy"><span class="education-card__year">2020 - </span> Udemy</p>
-                        <a href="https://www.udemy.com/certificate/UC-3f939403-20e6-4e1f-a1ea-5879a5c54de3/" class="pill pill--secondary" target="_blank">Certificate</a>
+                        <a href="https://www.udemy.com/certificate/UC-3f939403-20e6-4e1f-a1ea-5879a5c54de3/"
+                            class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -186,7 +191,8 @@
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Modern Javascript</h3>
                         <p class="education-card__academy"><span class="education-card__year">2020 - </span> Udemy</p>
-                        <a href="https://www.udemy.com/certificate/UC-a6728cbf-ce30-438e-815c-4c027cb29fa0/" class="pill pill--secondary" target="_blank">Certificate</a>
+                        <a href="https://www.udemy.com/certificate/UC-a6728cbf-ce30-438e-815c-4c027cb29fa0/"
+                            class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -197,7 +203,8 @@
                         <h3 class="education-card__topic">Business Agility</h3>
                         <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
                         </p>
-                        <a href="https://app.aluracursos.com/degree/certificate/01fb4063-74e6-4e61-b0b8-08f4513ff528" class="pill pill--secondary" target="_blank">Certificate</a>
+                        <a href="https://app.aluracursos.com/degree/certificate/01fb4063-74e6-4e61-b0b8-08f4513ff528"
+                            class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -208,7 +215,8 @@
                         <h3 class="education-card__topic">CSS Arquitecture</h3>
                         <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
                         </p>
-                        <a href="https://app.aluracursos.com/certificate/a-posas/arquitectura-css-descomplicando-los-problemas" class="pill pill--secondary" target="_blank">Certificate</a>
+                        <a href="https://app.aluracursos.com/certificate/a-posas/arquitectura-css-descomplicando-los-problemas"
+                            class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -216,10 +224,12 @@
                         <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
-                        <h3 class="education-card__topic">Oracle Next Education Program  - FrontEnd</h3>
-                        <p class="education-card__academy"><span class="education-card__year">In progress - </span> Alura
+                        <h3 class="education-card__topic">Oracle Next Education Program - FrontEnd</h3>
+                        <p class="education-card__academy"><span class="education-card__year">In progress - </span>
+                            Alura
                             Latam</p>
-                        <a href="https://www.oracle.com/mx/education/oracle-next-education/" class="pill pill--secondary" target="_blank">Program</a>
+                        <a href="https://www.oracle.com/mx/education/oracle-next-education/"
+                            class="pill pill--secondary" target="_blank">Program</a>
                     </div>
                 </div> <!--education-card-->
             </div>
@@ -240,8 +250,10 @@
                         <p class="experience__technology">SCSS</p>
                         <p class="experience__technology">Javascript</p>
                     </div>
-                    <a target="_blank" href="https://github.com/EduardoPosas/festivalMusica.git" class="pill pill--secondary">Repository</a>
-                    <a target="_blank" href="https://musicfestscss-portfolio.netlify.app/" class="pill pill--primary">Demo</a>
+                    <a target="_blank" href="https://github.com/EduardoPosas/festivalMusica.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://musicfestscss-portfolio.netlify.app/"
+                        class="pill pill--primary">Demo</a>
                 </div>
             </div><!--experience-->
             <div class="experience">
@@ -255,8 +267,10 @@
                         <p class="experience__technology">CSS</p>
                         <p class="experience__technology">Javascript</p>
                     </div>
-                    <a target="_blank" href="https://github.com/EduardoPosas/tiendaMuebles.git" class="pill pill--secondary">Repository</a>
-                    <a target="_blank" href="https://ecommerce-html-css-js-alex.netlify.app/" class="pill pill--primary">Demo</a>
+                    <a target="_blank" href="https://github.com/EduardoPosas/tiendaMuebles.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://ecommerce-html-css-js-alex.netlify.app/"
+                        class="pill pill--primary">Demo</a>
                 </div>
             </div><!--experience-->
             <div class="experience">
@@ -270,8 +284,10 @@
                         <p class="experience__technology">Tailwind</p>
                         <p class="experience__technology">Vite</p>
                     </div>
-                    <a target="_blank" href="https://github.com/EduardoPosas/citas-react-vite.git" class="pill pill--secondary">Repository</a>
-                    <a target="_blank" href="https://magenta-mochi-81fe62.netlify.app/" class="pill pill--primary">Demo</a>
+                    <a target="_blank" href="https://github.com/EduardoPosas/citas-react-vite.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://magenta-mochi-81fe62.netlify.app/"
+                        class="pill pill--primary">Demo</a>
                 </div>
             </div><!--experience-->
             <div class="experience">
@@ -285,8 +301,10 @@
                         <p class="experience__technology">CSS</p>
                         <p class="experience__technology">Javascript</p>
                     </div>
-                    <a target="_blank" href="https://github.com/EduardoPosas/Encriptador.git" class="pill pill--secondary">Repository</a>
-                    <a target="_blank" href="https://eduardoposas.github.io/Encriptador/" class="pill pill--primary">Demo</a>
+                    <a target="_blank" href="https://github.com/EduardoPosas/Encriptador.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://eduardoposas.github.io/Encriptador/"
+                        class="pill pill--primary">Demo</a>
                 </div>
             </div><!--experience-->
         </div>
@@ -344,7 +362,7 @@
         <p class="footer__description">Developed by <span>Alexander Pozas &copy;</span> All rights reserved</p>
     </footer>
 
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./src/js/index.js" type="module"></script>
 </body>
 
