Añadiendo archivo readme.md

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <a class="social-media__links social-media__links--linkedin"
                         href="https://www.linkedin.com/in/alexanderposas/" target="_blank">Linkedin</a>
                     <a class="social-media__links social-media__links--curriculum"
-                        href="src/files/alexanderCurriculum.pdf" download="alexanderPozasCurriculm.pdf">Curriculum</a>
+                        href="src/files/alexanderCurriculum.pdf" target="_blank">Curriculum</a>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="wrapper about__container">
             <h2 class="about__title">About Me</h2>
             <p class="about__text">I am an engineer in control and automation graduate of the National Institute
-                Polythecnic. I am 26 and have been fascinated by technology and web development. So by the time I
+                Polythecnic. I am 26, Mexican and have been fascinated by technology and web development. So by the time I
                 discovered this incredible world, I wanted to become a web developer. I consider myself a
                 well-organized, self-taught and responsible individual who enjoys learning new things on a daily basis.
             </p>
