Reparando urls de los archivos css

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="/src/css/base.css">
-    <link rel="stylesheet" href="/src/css/header.css">
-    <link rel="stylesheet" href="/src/css/perfil.css">
-    <link rel="stylesheet" href="/src/css/about.css">
-    <link rel="stylesheet" href="/src/css/skills.css">
-    <link rel="stylesheet" href="/src/css/soft-skills.css">
-    <link rel="stylesheet" href="/src/css/education.css">
-    <link rel="stylesheet" href="/src/css/experience.css">
-    <link rel="stylesheet" href="/src/css/contact.css">
-    <link rel="stylesheet" href="/src/css/footer.css">
-    <link rel="stylesheet" href="/src/css/components/pill.css">
+    <link rel="stylesheet" href="src/css/base.css">
+    <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/perfil.css">
+    <link rel="stylesheet" href="src/css/about.css">
+    <link rel="stylesheet" href="src/css/skills.css">
+    <link rel="stylesheet" href="src/css/soft-skills.css">
+    <link rel="stylesheet" href="src/css/education.css">
+    <link rel="stylesheet" href="src/css/experience.css">
+    <link rel="stylesheet" href="src/css/contact.css">
+    <link rel="stylesheet" href="src/css/footer.css">
+    <link rel="stylesheet" href="src/css/components/pill.css">
 
 </head>
 
