Reparando urls de iconos e imágenes de la página

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <section class="wrapper">
         <div class="perfil">
-            <img class="perfil__image" src="/src/images/yo.jpg" alt="me">
+            <img class="perfil__image" src="src/images/yo.jpg" alt="me">
             <div class="perfil__information">
                 <div class="perfil__data">
                     <h1 class="perfil__name">Hi! I am Alexander Pozas</h1>
@@ -163,7 +163,7 @@
             <div class="education-cards">
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/logos/ipn-logo.svg" alt="ipn institute">
+                        <img src="src/images/logos/ipn-logo.svg" alt="ipn institute">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Control and Automation Engineering</h3>
@@ -175,7 +175,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/logos/udemy-logo.svg" alt="udemy institute">
+                        <img src="src/images/logos/udemy-logo.svg" alt="udemy institute">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Web Development</h3>
@@ -186,7 +186,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/logos/udemy-logo.svg" alt="udemy institute">
+                        <img src="src/images/logos/udemy-logo.svg" alt="udemy institute">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Modern Javascript</h3>
@@ -197,7 +197,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
+                        <img src="src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Business Agility</h3>
@@ -209,7 +209,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
+                        <img src="src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">CSS Arquitecture</h3>
@@ -221,7 +221,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
+                        <img src="src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Oracle Next Education Program - FrontEnd</h3>
@@ -241,7 +241,7 @@
         <div class="experiences__container">
             <div class="experience">
                 <div class="experience__image">
-                    <img src="/src/images/festival-musica-min.png" alt="music festival web page">
+                    <img src="src/images/festival-musica-min.png" alt="music festival web page">
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Music Festival</h3>
@@ -258,7 +258,7 @@
             </div><!--experience-->
             <div class="experience">
                 <div class="experience__image">
-                    <img src="/src/images/tienda-muebles-min.png" alt="furniture store web page">
+                    <img src="src/images/tienda-muebles-min.png" alt="furniture store web page">
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Furniture Store</h3>
@@ -275,7 +275,7 @@
             </div><!--experience-->
             <div class="experience">
                 <div class="experience__image">
-                    <img src="/src/images/seguimiento-veterinaria-min.png" alt="veterinary control web page">
+                    <img src="src/images/seguimiento-veterinaria-min.png" alt="veterinary control web page">
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Veterinary Control</h3>
@@ -292,7 +292,7 @@
             </div><!--experience-->
             <div class="experience">
                 <div class="experience__image">
-                    <img src="/src/images/encriptador-texto-min.png" alt="text econder web page">
+                    <img src="src/images/encriptador-texto-min.png" alt="text econder web page">
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Text Encoder</h3>
