--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <div class="wrapper header__container">
             <div class="header__mobile">
                 <a class="logo" href="#">
-                    <img src="/src/images/logos/Logo.svg" alt="logo alexander">
+                    <img src="src/images/logos/Logo.svg" alt="logo alexander">
                 </a>
 
-                <img class="navigation__icon" src="/src/images/icons/hamburger-btn.svg" alt="hamburguer menu">
+                <img class="navigation__icon" src="src/images/icons/hamburger-btn.svg" alt="hamburguer menu">
             </div>
 
             <nav class="navigation">
