Adding new projects

--- a/index.html
+++ b/index.html
@@ -241,6 +241,63 @@
         <div class="experiences__container">
             <div class="experience">
                 <div class="experience__image">
+                    <img src="src/images/seguimiento-veterinaria-min.png" alt="veterinary control web page">
+                </div>
+                <div class="experience__content">
+                    <h3 class="experience__title">Veterinary Control</h3>
+                    <div class="experience__description">
+                        <p class="experience__technology">React</p>
+                        <p class="experience__technology">Tailwind</p>
+                        <p class="experience__technology">Vite</p>
+                        <p class="experience__technology">LocalStorage</p>
+                    </div>
+                    <a target="_blank" href="https://github.com/EduardoPosas/citas-react-vite.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://magenta-mochi-81fe62.netlify.app/"
+                        class="pill pill--primary">Demo</a>
+                </div>
+            </div><!--experience-->
+            <div class="experience">
+                <div class="experience__image">
+                    <img src="src/images/react-team-min.png" alt="team organization">
+                </div>
+                <div class="experience__content">
+                    <h3 class="experience__title">Team Organization</h3>
+                    <div class="experience__description">
+                        <p class="experience__technology">React</p>
+                        <p class="experience__technology">React Icons</p>
+                        <p class="experience__technology">Vite</p>
+                        <p class="experience__technology">LocalStorage</p>
+                        <p class="experience__technology">Uuid</p>
+                    </div>
+                    <a target="_blank" href="https://github.com/EduardoPosas/team-org-react.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://eduardoposas.github.io/team-org-react/"
+                        class="pill pill--primary">Demo</a>
+                </div>
+            </div><!--experience-->
+            <div class="experience">
+                <div class="experience__image">
+                    <img src="src/images/alura-geek-min.png" alt="alura geek">
+                </div>
+                <div class="experience__content">
+                    <h3 class="experience__title">Ecommerce</h3>
+                    <div class="experience__description">
+                        <p class="experience__technology">HTML</p>
+                        <p class="experience__technology">Talwind Css</p>
+                        <p class="experience__technology">Vite</p>
+                        <p class="experience__technology">Rest API</p>
+                        <p class="experience__technology">Json Server</p>
+                        <p class="experience__technology">Session Storage</p>
+                    </div>
+                    <a target="_blank" href="https://github.com/EduardoPosas/alura-geek-vanillajs.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://eduardoposas.github.io/alura-geek-vanillajs/"
+                        class="pill pill--primary">Demo</a>
+                </div>
+            </div><!--experience-->
+            <div class="experience">
+                <div class="experience__image">
                     <img src="src/images/festival-musica-min.png" alt="music festival web page">
                 </div>
                 <div class="experience__content">
@@ -273,23 +330,7 @@
                         class="pill pill--primary">Demo</a>
                 </div>
             </div><!--experience-->
-            <div class="experience">
-                <div class="experience__image">
-                    <img src="src/images/seguimiento-veterinaria-min.png" alt="veterinary control web page">
-                </div>
-                <div class="experience__content">
-                    <h3 class="experience__title">Veterinary Control</h3>
-                    <div class="experience__description">
-                        <p class="experience__technology">React</p>
-                        <p class="experience__technology">Tailwind</p>
-                        <p class="experience__technology">Vite</p>
-                    </div>
-                    <a target="_blank" href="https://github.com/EduardoPosas/citas-react-vite.git"
-                        class="pill pill--secondary">Repository</a>
-                    <a target="_blank" href="https://magenta-mochi-81fe62.netlify.app/"
-                        class="pill pill--primary">Demo</a>
-                </div>
-            </div><!--experience-->
+
             <div class="experience">
                 <div class="experience__image">
                     <img src="src/images/encriptador-texto-min.png" alt="text econder web page">
