Updating curriculum file pdf

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Business Agility</h3>
-                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
+                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam  & Oracle
                         </p>
                         <a href="https://app.aluracursos.com/degree/certificate/01fb4063-74e6-4e61-b0b8-08f4513ff528"
                             class="pill pill--secondary" target="_blank">Certificate</a>
@@ -212,10 +212,10 @@
                         <img src="src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
-                        <h3 class="education-card__topic">CSS Arquitecture</h3>
-                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
+                        <h3 class="education-card__topic">React - FrontEnd</h3>
+                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam & Oracle
                         </p>
-                        <a href="https://app.aluracursos.com/certificate/a-posas/arquitectura-css-descomplicando-los-problemas"
+                        <a href="https://app.aluracursos.com/user/a-posas/degree-react-grupo5-one-15576/certificate"
                             class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
@@ -225,11 +225,11 @@
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Oracle Next Education Program - FrontEnd</h3>
-                        <p class="education-card__academy"><span class="education-card__year">In progress - </span>
+                        <p class="education-card__academy"><span class="education-card__year">2023 - </span>
                             Alura
-                            Latam</p>
-                        <a href="https://www.oracle.com/mx/education/oracle-next-education/"
-                            class="pill pill--secondary" target="_blank">Program</a>
+                            Latam & Oracle</p>
+                        <a href="https://app.aluracursos.com/user/a-posas/program/certificate"
+                            class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
             </div>
@@ -247,6 +247,7 @@
                     <h3 class="experience__title">Veterinary Control</h3>
                     <div class="experience__description">
                         <p class="experience__technology">React</p>
+                        <p class="experience__technology">React Hooks</p>
                         <p class="experience__technology">Tailwind</p>
                         <p class="experience__technology">Vite</p>
                         <p class="experience__technology">LocalStorage</p>
@@ -265,6 +266,7 @@
                     <h3 class="experience__title">Team Organization</h3>
                     <div class="experience__description">
                         <p class="experience__technology">React</p>
+                        <p class="experience__technology">React Hooks</p>
                         <p class="experience__technology">React Icons</p>
                         <p class="experience__technology">Vite</p>
                         <p class="experience__technology">LocalStorage</p>
@@ -284,6 +286,7 @@
                     <h3 class="experience__title">Ecommerce</h3>
                     <div class="experience__description">
                         <p class="experience__technology">HTML</p>
+                        <p class="experience__technology">Javascript</p>
                         <p class="experience__technology">Talwind Css</p>
                         <p class="experience__technology">Vite</p>
                         <p class="experience__technology">Rest API</p>
